	moved call to set stdinput to use blocking mode from
		rudiments::stdiofiledescriptor to sqlrsh, as doing it in every
		case caused problems with apps like Apache, which need
		stdin/out/err to be in non-blocking mode sometimes (fixes bug
		where PHP's that used the SQL Relay API would cause apache
		workers to hang closing connections after a graceful restart)

0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
	added informix connection module
	added shutdown loop detection in sqlr-listener
	fixed dbhostname/dbipaddress requests
	added bind variable format validation to php pdo driver
	added softttl parameter
	added db/language detection to configure.vbs
	added passwordfunction parameter to "sqlrelay" authentication module
	added -disable-crash-handler command line option to server processes
	postgresql connection module PQclear()'s the result of PQprepare() now,
		fixing a memory leak
	updated postgresql connection module to handle invalid bind variables
		properly, and without crash
	added various missing postgresql functions to the postgresql drop-in
		library, most notably PQprepare, PQexecPrepared, PQexecParams
	simplified sqlrpaths/sqlrcmdline classes a bit
	renamed sqlrconfigfile to sqlrconfig
	implemented a modular configuration framework
	config files can be loaded over protocols supported by libcurl now
		or http if rudiments compiled withougt libcurl support
	config files can now be "link files" which just refer to other local
		config files, local config directories, or remote config files
	updated sqlr-start and sqlr-scaler not to pass the default -config
		value if sqlr-start wasn't explicitly started with -config
	fixed a bug that could cause sqlrsh to act funny if the last character
		prior to the command delimiter was a single or double quote
	fixed a stacked result-set translation module bug
	applied George Carrette's patch to fix potential PDO null-dereferences

0.63.1 - backported shutdown loop detection
