@@ -4,26 +4,26 @@
 #include <sqlrelay/sqlrserver.h>
 #include <rudiments/charstring.h>
 
-class SQLRSERVER_DLLSPEC sqlrauth_database : public sqlrauth {
+class SQLRSERVER_DLLSPEC sqlrauth_proxied : public sqlrauth {
 	public:
-			sqlrauth_database(xmldomnode *parameters,
+			sqlrauth_proxied(xmldomnode *parameters,
 					sqlrpwdencs *sqlrpe);
 		bool	auth(sqlrserverconnection *sqlrcon,
 					const char *user, const char *password);
 };
 
-sqlrauth_database::sqlrauth_database(xmldomnode *parameters,
+sqlrauth_proxied::sqlrauth_proxied(xmldomnode *parameters,
 					sqlrpwdencs *sqlrpe) :
 					sqlrauth(parameters,sqlrpe) {
 }
 
-bool sqlrauth_database::auth(sqlrserverconnection *sqlrcon,
+bool sqlrauth_proxied::auth(sqlrserverconnection *sqlrcon,
 				const char *user, const char *password) {
 
 	sqlrservercontroller	*cont=sqlrcon->cont;
 
 	// if the user we want to change to is different from the user
-	// that's currently logged in, try to change to that user
+	// that's currently beign proxied, try to change to that user
 	bool	success=true;
 	const char	*lastuser=cont->getLastUser();
 	const char	*lastpassword=cont->getLastPassword();
@@ -33,7 +33,7 @@ bool sqlrauth_database::auth(sqlrserverconnection *sqlrcon,
 		charstring::compare(lastpassword,password)) {
 
 		// change user
-		success=cont->changeUser(user,password);
+		success=sqlrcon->changeProxiedUser(user,password);
 
 		// keep a record of which user we're changing to
 		// and whether that user was successful in auth
@@ -44,9 +44,9 @@ bool sqlrauth_database::auth(sqlrserverconnection *sqlrcon,
 }
 
 extern "C" {
-	SQLRSERVER_DLLSPEC sqlrauth *new_sqlrauth_database(
+	SQLRSERVER_DLLSPEC sqlrauth *new_sqlrauth_proxied(
 						xmldomnode *users,
 						sqlrpwdencs *sqlrpe) {
-		return new sqlrauth_database(users,sqlrpe);
+		return new sqlrauth_proxied(users,sqlrpe);
 	}
 }
