@@ -144,6 +144,10 @@ class SQLRSERVER_DLLSPEC sqlrservercontroller {
 		void		setPassword(const char *password);
 		const char	*getUser();
 		const char	*getPassword();
+		void		setLastUser(const char *user);
+		void		setLastPassword(const char *password);
+		const char	*getLastUser();
+		const char	*getLastPassword();
 		bool		auth(const char *userbuffer,
 						const char *passwordbuffer);
 		bool		changeUser(const char *newuser,
@@ -225,11 +229,6 @@ class SQLRSERVER_DLLSPEC sqlrservercontroller {
 						uint32_t querylen);
 		void	updateClientInfo(const char *info,
 						uint32_t infolen);
-
-
-		// auth api...
-		bool	databaseBasedAuth(const char *userbuffer,
-						const char *passwordbuffer);
 
 
 		// statistics api...
@@ -614,7 +613,7 @@ class SQLRSERVER_DLLSPEC sqlrserverconnection {
 					const char **warning)=0;
 		virtual	void	logOut()=0;
 
-		virtual	bool	changeUser(const char *newuser,
+		virtual	bool	changeProxiedUser(const char *newuser,
 						const char *newpassword);
 
 		virtual bool	autoCommitOn();
